[project]
name = "meshtastic-visualizer"
version = "1.8.0"
description = "Qt desktop application to send messages, inspect packets, metrics from your Meshtastic node."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.3",
    "folium==0.17.0",
    "meshtastic==2.6.3",
    "paho-mqtt>=2.1.0",
    "protobuf==5.27.3",
    "pubsub==0.1.2",
    "pyqt6==6.8",
    "pyqt6-webengine==6.7",
    "pyqtgraph>=0.13.7",
    "pyserial==3.5",
]

